--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
     "jsx": "preserve",
     "incremental": true,
     "useUnknownInCatchVariables": false,
+    "noImplicitAny": false,
     "plugins": [
       {
         "name": "next"
